--- a/package.json
+++ b/package.json
@@ -1,80 +1,81 @@
 {
-  "name": "fitness",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
-    "eject": "react-scripts eject"
-  },
-  "dependencies": {
-    "@capacitor/app": "4.0.1",
-    "@capacitor/core": "4.1.0",
-    "@capacitor/haptics": "4.0.1",
-    "@capacitor/keyboard": "4.0.1",
-    "@capacitor/status-bar": "4.0.1",
-    "@headlessui/react": "^1.6.6",
-    "@heroicons/react": "^2.0.10",
-    "@ionic/react": "^6.0.0",
-    "@ionic/react-router": "^6.0.0",
-    "@tanstack/react-query": "^4.2.3",
-    "axios": "^0.27.2",
-    "chart.js": "^3.9.1",
-    "date-fns": "^2.29.2",
-    "ionicons": "^6.0.3",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^4.3.1",
-    "react-dom": "^18.2.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^6.3.0",
-    "web-vitals": "^0.2.4",
-    "workbox-background-sync": "^5.1.4",
-    "workbox-broadcast-update": "^5.1.4",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-core": "^5.1.4",
-    "workbox-expiration": "^5.1.4",
-    "workbox-google-analytics": "^5.1.4",
-    "workbox-navigation-preload": "^5.1.4",
-    "workbox-precaching": "^5.1.4",
-    "workbox-range-requests": "^5.1.4",
-    "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
-  },
-  "devDependencies": {
-    "@capacitor/cli": "4.1.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^12.6.3",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^12.19.15",
-    "@types/react": "^18.0.17",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-router": "^5.1.11",
-    "@types/react-router-dom": "^5.1.7",
-    "eslint": "^7.32.0",
-    "react-scripts": "^5.0.0",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.1.3"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "description": "An Ionic project"
+    "name": "fitness",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
+        "eject": "react-scripts eject"
+    },
+    "dependencies": {
+        "@capacitor/app": "4.0.1",
+        "@capacitor/core": "4.1.0",
+        "@capacitor/haptics": "4.0.1",
+        "@capacitor/keyboard": "4.0.1",
+        "@capacitor/status-bar": "4.0.1",
+        "@headlessui/react": "^1.6.6",
+        "@heroicons/react": "^2.0.10",
+        "@ionic/react": "^6.2.5",
+        "@ionic/react-router": "^6.2.5",
+        "@tanstack/react-query": "^4.2.3",
+        "axios": "^0.27.2",
+        "chart.js": "^3.9.1",
+        "date-fns": "^2.29.2",
+        "ionicons": "^6.0.3",
+        "react": "^18.2.0",
+        "react-chartjs-2": "^4.3.1",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.3.0",
+        "web-vitals": "^3.0.1",
+        "workbox-background-sync": "^6.5.4",
+        "workbox-broadcast-update": "^6.5.4",
+        "workbox-cacheable-response": "^6.5.4",
+        "workbox-core": "^6.5.4",
+        "workbox-expiration": "^6.5.4",
+        "workbox-google-analytics": "^6.5.4",
+        "workbox-navigation-preload": "^6.5.4",
+        "workbox-precaching": "^6.5.4",
+        "workbox-range-requests": "^6.5.4",
+        "workbox-routing": "^6.5.4",
+        "workbox-strategies": "^6.5.4",
+        "workbox-streams": "^6.5.4"
+    },
+    "devDependencies": {
+        "@capacitor/cli": "4.1.0",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^14.4.3",
+        "@types/jest": "^29.0.0",
+        "@types/node": "^16.11.56",
+        "@types/react": "^18.0.18",
+        "@types/react-dom": "^18.0.6",
+        "@types/react-router": "^5.1.18",
+        "@types/react-router-dom": "^5.3.3",
+        "eslint": "^7.32.0",
+        "eslint-config-react-app": "^7.0.1",
+        "prettier": "^2.7.1",
+        "react-scripts": "^5.0.1",
+        "tailwindcss": "^3.1.8",
+        "typescript": "^4.8.2"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "description": "An Ionic project"
 }
