--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@capacitor/app": "4.0.1",
         "@capacitor/core": "4.1.0",
         "@capacitor/haptics": "4.0.1",
+        "@capacitor/ios": "4.1.0",
         "@capacitor/keyboard": "4.0.1",
         "@capacitor/status-bar": "4.0.1",
         "@headlessui/react": "^1.6.6",
@@ -26,7 +27,8 @@
         "react": "^18.2.0",
         "react-chartjs-2": "^4.3.1",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.3.0",
+        "react-router": "5.3.3",
+        "react-router-dom": "5.3.3",
         "web-vitals": "^3.0.1",
         "workbox-background-sync": "^6.5.4",
         "workbox-broadcast-update": "^6.5.4",
@@ -52,7 +54,7 @@
         "@types/react-dom": "^18.0.6",
         "@types/react-router": "^5.1.18",
         "@types/react-router-dom": "^5.3.3",
-        "eslint": "^7.32.0",
+        "eslint": "=8.22.0",
         "eslint-config-react-app": "^7.0.1",
         "prettier": "^2.7.1",
         "react-scripts": "^5.0.1",
