--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
         "@types/react-dom": "^18.0.6",
         "@types/react-router": "^5.1.18",
         "@types/react-router-dom": "^5.3.3",
+        "autoprefixer": "^10.4.8",
         "eslint": "=8.22.0",
         "eslint-config-react-app": "^7.0.1",
+        "postcss": "^8.4.16",
         "prettier": "^2.7.1",
         "react-scripts": "^5.0.1",
         "tailwindcss": "^3.1.8",
