--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:7071
-_REACT_APP_API_URL=https://fitness-dev.azurewebsites.net
+_REACT_APP_API_URL=http://localhost:7071
+REACT_APP_API_URL=https://fitness-dev.azurewebsites.net
