--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
         "@types/react-router": "^5.1.18",
         "@types/react-router-dom": "^5.3.3",
         "autoprefixer": "^10.4.11",
-        "eslint": "=8.23.1",
+        "eslint": "^8.23.1",
         "eslint-config-react-app": "^7.0.1",
         "postcss": "^8.4.16",
         "prettier": "^2.7.1",
