get scan food working

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 BROWSER=chrome
 
-REACT_APP_API_URL=http://localhost:7071
-_REACT_APP_API_URL=https://fitness-dev.azurewebsites.net
+_REACT_APP_API_URL=http://localhost:7071
+REACT_APP_API_URL=https://fitness-dev.azurewebsites.net
