--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
         "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
     },
     "dependencies": {
+        "@awesome-cordova-plugins/barcode-scanner": "^5.45.0",
         "@capacitor/app": "4.0.1",
         "@capacitor/core": "4.3.0",
         "@capacitor/haptics": "4.0.1",
-        "@capacitor/ios": "4.2.0",
+        "@capacitor/ios": "4.3.0",
         "@capacitor/keyboard": "4.0.1",
         "@capacitor/status-bar": "4.0.1",
         "@headlessui/react": "^1.7.2",
@@ -25,6 +26,7 @@
         "chart.js": "^3.9.1",
         "date-fns": "^2.29.3",
         "ionicons": "^6.0.3",
+        "phonegap-plugin-barcodescanner": "^8.1.0",
         "react": "^18.2.0",
         "react-chartjs-2": "^4.3.1",
         "react-dom": "^18.2.0",
