switch from react-scripts to vite

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 BROWSER=chrome
 
-_REACT_APP_API_URL=http://localhost:7071
-REACT_APP_API_URL=https://fitness-dev.azurewebsites.net
+_VITE_API_URL=http://localhost:7071
+VITE_API_URL=https://fitness-dev.azurewebsites.net
