--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
-        "eject": "react-scripts eject",
+        "dev": "vite",
+        "build": "vite build",
+        "serve": "vite preview",
+        "ionic:serve": "vite",
+        "ionic:build": "vite build",
         "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
     },
     "dependencies": {
@@ -57,20 +58,22 @@
         "@types/react-dom": "^18.0.6",
         "@types/react-router": "^5.1.18",
         "@types/react-router-dom": "^5.3.3",
+        "@vitejs/plugin-react": "^2.0.1",
         "autoprefixer": "^10.4.12",
         "eslint": "=8.22.0",
         "eslint-config-react-app": "^7.0.1",
         "postcss": "^8.4.16",
         "prettier": "^2.7.1",
-        "react-scripts": "^5.0.1",
         "sass": "^1.55.0",
         "tailwindcss": "^3.1.8",
-        "typescript": "^4.8.3"
+        "typescript": "^4.8.3",
+        "vite": "^3.1.4",
+        "vite-plugin-svgr": "2.2.1",
+        "vite-tsconfig-paths": "^3.5.0"
     },
     "eslintConfig": {
         "extends": [
-            "react-app",
-            "react-app/jest"
+            "react-app"
         ]
     },
     "browserslist": {
