--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
         "react": "^18.2.0",
         "react-chartjs-2": "^4.3.1",
         "react-dom": "^18.2.0",
-        "react-router": "5.3.3",
-        "react-router-dom": "5.3.4",
+        "react-router": "=5.3.3",
+        "react-router-dom": "=5.3.3",
         "web-vitals": "^3.0.2",
         "workbox-background-sync": "^6.5.4",
         "workbox-broadcast-update": "^6.5.4",
