--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
     },
     "dependencies": {
-        "@awesome-cordova-plugins/barcode-scanner": "^6.0.0",
+        "@awesome-cordova-plugins/barcode-scanner": "^6.1.0",
+        "@awesome-cordova-plugins/core": "^6.1.0",
+        "@awesome-cordova-plugins/purchases": "^6.1.0",
         "@capacitor/app": "4.0.1",
         "@capacitor/core": "4.3.0",
         "@capacitor/haptics": "4.0.1",
@@ -25,6 +27,7 @@
         "@tanstack/react-query": "^4.12.0",
         "axios": "^1.1.3",
         "chart.js": "^3.9.1",
+        "cordova-plugin-purchases": "^3.2.0",
         "date-fns": "^2.29.3",
         "ionicons": "^6.0.3",
         "phonegap-plugin-barcodescanner": "^8.1.0",
