--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
     "dependencies": {
         "@awesome-cordova-plugins/barcode-scanner": "^6.1.0",
         "@awesome-cordova-plugins/core": "^6.1.0",
-        "@awesome-cordova-plugins/purchases": "^6.1.0",
-        "@capacitor/app": "4.0.1",
-        "@capacitor/core": "4.3.0",
+        "@awesome-cordova-plugins/in-app-purchase-2": "^6.1.0",
+        "@capacitor/app": "4.1.0",
+        "@capacitor/core": "4.4.0",
         "@capacitor/haptics": "4.0.1",
-        "@capacitor/ios": "4.3.0",
+        "@capacitor/ios": "4.4.0",
         "@capacitor/keyboard": "4.0.1",
         "@capacitor/status-bar": "4.0.1",
         "@headlessui/react": "^1.7.3",
-        "@heroicons/react": "^2.0.11",
-        "@ionic/react": "^6.3.0",
-        "@ionic/react-router": "^6.3.1",
-        "@tanstack/react-query": "^4.12.0",
+        "@heroicons/react": "^2.0.12",
+        "@ionic/react": "^6.3.2",
+        "@ionic/react-router": "^6.3.2",
+        "@tanstack/react-query": "^4.13.0",
         "axios": "^1.1.3",
         "chart.js": "^3.9.1",
-        "cordova-plugin-purchases": "^3.2.0",
+        "cordova-plugin-purchase": "^11.0.0",
         "date-fns": "^2.29.3",
         "ionicons": "^6.0.3",
         "phonegap-plugin-barcodescanner": "^8.1.0",
