--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
         "@capacitor/status-bar": "4.0.1",
         "@headlessui/react": "^1.7.3",
         "@heroicons/react": "^2.0.12",
-        "@ionic/react": "^6.3.2",
-        "@ionic/react-router": "^6.3.2",
+        "@ionic/react": "^6.3.3",
+        "@ionic/react-router": "^6.3.3",
         "@tanstack/react-query": "^4.13.0",
         "axios": "^1.1.3",
         "chart.js": "^3.9.1",
@@ -38,43 +38,31 @@
         "react-dom": "^18.2.0",
         "react-router": "=5.3.3",
         "react-router-dom": "=5.3.3",
-        "web-vitals": "^3.0.3",
-        "workbox-background-sync": "^6.5.4",
-        "workbox-broadcast-update": "^6.5.4",
-        "workbox-cacheable-response": "^6.5.4",
-        "workbox-core": "^6.5.4",
-        "workbox-expiration": "^6.5.4",
-        "workbox-google-analytics": "^6.5.4",
-        "workbox-navigation-preload": "^6.5.4",
-        "workbox-precaching": "^6.5.4",
-        "workbox-range-requests": "^6.5.4",
-        "workbox-routing": "^6.5.4",
-        "workbox-strategies": "^6.5.4",
-        "workbox-streams": "^6.5.4"
+        "web-vitals": "^3.0.4"
     },
     "devDependencies": {
-        "@capacitor/cli": "4.3.0",
+        "@capacitor/cli": "4.4.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.4.3",
-        "@types/jest": "^29.1.2",
-        "@types/node": "^16.11.56",
-        "@types/react": "^18.0.21",
-        "@types/react-dom": "^18.0.6",
-        "@types/react-router": "^5.1.18",
-        "@types/react-router-dom": "^5.3.3",
-        "@vitejs/plugin-react": "^2.0.1",
+        "@types/jest": "^29.2.0",
+        "@types/node": "^16.18.1",
+        "@types/react": "^18.0.23",
+        "@types/react-dom": "^18.0.7",
+        "@types/react-router": "^5.1.19",
+        "@types/react-router-dom": "^5.3.0",
+        "@vitejs/plugin-react": "^2.2.0",
         "autoprefixer": "^10.4.12",
-        "eslint": "=8.22.0",
+        "eslint": "^8.26.0",
         "eslint-config-react-app": "^7.0.1",
         "postcss": "^8.4.18",
         "prettier": "^2.7.1",
         "sass": "^1.55.0",
-        "tailwindcss": "^3.1.8",
-        "typescript": "^4.8.3",
-        "vite": "^3.1.8",
+        "tailwindcss": "^3.2.1",
+        "typescript": "^4.8.4",
+        "vite": "^3.2.0",
         "vite-plugin-svgr": "2.2.2",
-        "vite-tsconfig-paths": "^3.5.0"
+        "vite-tsconfig-paths": "^3.5.2"
     },
     "eslintConfig": {
         "extends": [
