--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "fitness",
+    "description": "An Ionic project",
     "version": "0.0.1",
     "private": true,
     "scripts": {
@@ -63,23 +64,5 @@
         "vite": "^3.2.0",
         "vite-plugin-svgr": "2.2.2",
         "vite-tsconfig-paths": "^3.5.2"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "description": "An Ionic project"
+    }
 }
