update web icons

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Ionic App",
-    "name": "My Ionic App",
+    "short_name": "Liftix",
+    "name": "Liftix",
     "icons": [
         {
             "src": "assets/icon/favicon.png",
@@ -16,6 +16,6 @@
     ],
     "start_url": ".",
     "display": "standalone",
-    "theme_color": "#ffffff",
+    "theme_color": "#0D3140",
     "background_color": "#ffffff"
 }
