change app name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Liftix",
-    "name": "Liftix",
+    "short_name": "WorkoutTrack",
+    "name": "WorkoutTrack",
     "icons": [
         {
             "src": "assets/icon/favicon.png",
