--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
         "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
     },
     "dependencies": {
-        "@awesome-cordova-plugins/barcode-scanner": "^6.1.0",
         "@awesome-cordova-plugins/core": "^6.1.0",
         "@awesome-cordova-plugins/in-app-purchase-2": "^6.1.0",
+        "@capacitor-community/barcode-scanner": "^3.0.0",
+        "@capacitor/android": "4.4.0",
         "@capacitor/app": "4.1.0",
         "@capacitor/core": "4.4.0",
         "@capacitor/haptics": "4.0.1",
@@ -28,11 +29,11 @@
         "@ionic/react-router": "^6.3.3",
         "@tanstack/react-query": "^4.13.5",
         "axios": "^1.1.3",
+        "capacitor-plugin-dynamsoft-barcode-reader": "^1.3.6",
         "chart.js": "^3.9.1",
         "cordova-plugin-purchase": "^11.0.0",
         "date-fns": "^2.29.3",
         "ionicons": "^6.0.3",
-        "phonegap-plugin-barcodescanner": "^8.1.0",
         "react": "^18.2.0",
         "react-chartjs-2": "^4.3.1",
         "react-dom": "^18.2.0",
