--- a/ios/App/App/App.entitlements
+++ b/ios/App/App/App.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:lifttrack-b8673.web.app</string>
+		<string>applinks:workout-track.com</string>
 	</array>
 </dict>
 </plist>
