--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,12 @@
                 "source": "**",
                 "destination": "/index.html"
             }
+        ],
+        "headers": [
+            {
+                "source": "/.well-known/apple-app-site-association",
+                "headers": [{"key": "Content-Type", "value": "application/json"}]
+            }
         ]
     }
 }
