--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation project(':capacitor-haptics')
     implementation project(':capacitor-keyboard')
     implementation project(':capacitor-status-bar')
+    implementation "com.google.android.gms:play-services-ads:15.0.0"
     implementation "com.android.billingclient:billing:4.0.0"
 }
 
