--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "@types/react-dom": "^18.0.10",
         "@types/react-router": "^5.1.19",
         "@types/react-router-dom": "^5.3.3",
-        "@vitejs/plugin-react": "^3.0.0",
+        "@vitejs/plugin-react-swc": "^3.0.1",
         "autoprefixer": "^10.4.13",
         "eslint": "^8.30.0",
         "eslint-config-react-app": "^7.0.1",
