--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@awesome-cordova-plugins/core": "^6.2.0",
         "@awesome-cordova-plugins/in-app-purchase-2": "^6.2.0",
         "@capacitor-community/barcode-scanner": "^3.0.1",
+        "@capacitor-community/firebase-analytics": "^4.0.0",
         "@capacitor/android": "4.6.1",
         "@capacitor/app": "4.1.1",
         "@capacitor/core": "4.6.1",
@@ -56,7 +57,7 @@
         "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react-swc": "^3.0.1",
         "autoprefixer": "^10.4.13",
-        "eslint": "^8.30.0",
+        "eslint": "^8.31.0",
         "eslint-config-react-app": "^7.0.1",
         "postcss": "^8.4.20",
         "prettier": "^2.8.1",
