--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
     },
     "dependencies": {
         "@admob-plus/capacitor": "^1.24.0",
-        "@awesome-cordova-plugins/core": "^6.2.0",
-        "@awesome-cordova-plugins/in-app-purchase-2": "^6.2.0",
+        "@awesome-cordova-plugins/core": "^6.3.0",
+        "@awesome-cordova-plugins/in-app-purchase-2": "^6.3.0",
         "@capacitor-community/barcode-scanner": "^3.0.1",
         "@capacitor-community/firebase-analytics": "^4.0.0",
         "@capacitor/android": "4.6.1",
         "@capacitor/app": "4.1.1",
         "@capacitor/core": "4.6.1",
         "@capacitor/haptics": "4.1.0",
-        "@capacitor/ios": "4.6.1",
-        "@capacitor/keyboard": "4.1.0",
-        "@capacitor/status-bar": "4.1.1",
+        "@capacitor/ios": "^4.6.1",
+        "@capacitor/keyboard": "^4.1.0",
+        "@capacitor/status-bar": "^4.1.1",
         "@headlessui/react": "^1.7.7",
         "@ionic/react": "^6.4.1",
         "@ionic/react-router": "^6.4.1",
         "@tanstack/react-query": "^4.20.4",
-        "axios": "^1.2.1",
+        "axios": "^1.2.2",
         "capacitor-ios-autofill-save-password": "^1.1.4",
         "chart.js": "^4.1.1",
         "cordova-plugin-purchase": "^11.0.0",
@@ -49,11 +49,11 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.4.3",
-        "@types/jest": "^29.2.4",
-        "@types/node": "^18.11.17",
+        "@types/jest": "^29.2.5",
+        "@types/node": "^18.11.18",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.10",
-        "@types/react-router": "^5.1.19",
+        "@types/react-router": "^5.1.20",
         "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react-swc": "^3.0.1",
         "autoprefixer": "^10.4.13",
