--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@headlessui/react": "^1.7.7",
         "@ionic/react": "^6.4.1",
         "@ionic/react-router": "^6.4.1",
+        "@tailwindcss/forms": "^0.5.3",
         "@tanstack/react-query": "^4.20.9",
         "axios": "^1.2.2",
         "capacitor-ios-autofill-save-password": "^1.1.4",
