--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "@capacitor-community/firebase-analytics": "^4.0.0",
         "@capacitor/android": "4.6.1",
         "@capacitor/app": "4.1.1",
+        "@capacitor/camera": "^4.1.4",
         "@capacitor/core": "4.6.1",
+        "@capacitor/filesystem": "^4.1.4",
         "@capacitor/haptics": "4.1.0",
         "@capacitor/ios": "^4.6.1",
         "@capacitor/keyboard": "^4.1.0",
