--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "@ionic/react-router": "^6.5.0",
         "@tailwindcss/forms": "^0.5.3",
         "@tanstack/react-query": "^4.22.4",
-        "axios": "^1.2.3",
+        "axios": "^1.2.5",
         "capacitor-ios-autofill-save-password": "^1.1.4",
         "chart.js": "^4.2.0",
         "cordova-plugin-purchase": "^11.0.0",
@@ -64,6 +64,7 @@
         "eslint-config-react-app": "^7.0.1",
         "postcss": "^8.4.21",
         "prettier": "^2.8.3",
+        "prettier-plugin-tailwindcss": "^0.1.13",
         "sass": "^1.57.1",
         "tailwindcss": "^3.2.4",
         "typescript": "^4.9.4",
