--- a/ios/App/App/GoogleService-Info.plist
+++ b/ios/App/App/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>857870999277-028pa9vrl01ug85od5rtum5kc6ecssop.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.857870999277-028pa9vrl01ug85od5rtum5kc6ecssop</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>857870999277-01qjsspeoort7u2m3met8dpqt7a5qpkl.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBSOTvqXO28wkUEsxf3a9zAufKYHhrsY0I</string>
 	<key>GCM_SENDER_ID</key>
