--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -9,9 +9,11 @@ android {
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
-    implementation project(':admob-plus-capacitor')
+    implementation project(':capacitor-community-admob')
     implementation project(':capacitor-community-barcode-scanner')
     implementation project(':capacitor-community-firebase-analytics')
+    implementation project(':capacitor-firebase-app')
+    implementation project(':capacitor-firebase-authentication')
     implementation project(':capacitor-app')
     implementation project(':capacitor-camera')
     implementation project(':capacitor-filesystem')
