--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
         "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
     },
     "dependencies": {
-        "@admob-plus/capacitor": "^1.24.0",
         "@awesome-cordova-plugins/core": "^6.3.0",
         "@awesome-cordova-plugins/in-app-purchase-2": "^6.3.0",
+        "@capacitor-community/admob": "^4.1.0",
         "@capacitor-community/barcode-scanner": "^3.0.1",
         "@capacitor-community/firebase-analytics": "^4.0.0",
+        "@capacitor-firebase/app": "^1.3.0",
+        "@capacitor-firebase/authentication": "^1.3.0",
         "@capacitor/android": "4.6.2",
         "@capacitor/app": "4.1.1",
         "@capacitor/camera": "^4.1.4",
@@ -38,6 +40,7 @@
         "chart.js": "^4.2.0",
         "cordova-plugin-purchase": "^11.0.0",
         "date-fns": "^2.29.3",
+        "firebase": "^9.16.0",
         "ionicons": "^6.1.1",
         "react": "^18.2.0",
         "react-chartjs-2": "^5.2.0",
