--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,7 @@
         {
             "src": "assets/icon/icon.png",
             "type": "image/png",
-            "sizes": "512x512",
+            "sizes": "512x512 144x144",
             "purpose": "maskable"
         }
     ],
