--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ google-services.json
 
 # Turbo Repo
 .turbo
+
+# Auto Generated PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
