--- a/tooling/prettier/package.json
+++ b/tooling/prettier/package.json
@@ -17,5 +17,5 @@
     "@fitness/tsconfig": "workspace:*",
     "typescript": "^5.3.2"
   },
-  "prettier": "@fitnessprettier-config"
+  "prettier": "./index.mjs"
 }
