--- a/apps/workout-t3/package.json
+++ b/apps/workout-t3/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "with-env": "dotenv -e ../../.env --",
         "build": "pnpm with-env next build",
-        "dev": "pnpm with-env next dev",
+        "_dev": "pnpm with-env next dev",
         "lint": "pnpm with-env next lint",
         "start": "next start"
     },
