--- a/apps/workout-t3/package.json
+++ b/apps/workout-t3/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "with-env": "dotenv -e ../../.env --",
-        "build": "pnpm with-env next build",
+        "_build": "pnpm with-env next build",
         "_dev": "pnpm with-env next dev",
         "lint": "pnpm with-env next lint",
         "start": "next start"
