--- a/apps/body/package.json
+++ b/apps/body/package.json
@@ -13,6 +13,7 @@
         "@clerk/nextjs": "^4.28.1",
         "@fitness/api": "workspace:*",
         "@fitness/types": "workspace:*",
+        "@fitness/ui": "workspace:*",
         "@headlessui/react": "^1.7.17",
         "@khmyznikov/pwa-install": "^0.2.7",
         "@prisma/client": "^5.7.0",
