--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,8 +1,8 @@
 {
     "name": "@fitness/ui",
     "version": "0.1.0",
-    "main": "./index.ts",
-    "types": "./index.ts",
+    "main": "./src/index.ts",
+    "types": "./src/index.ts",
     "license": "MIT",
     "scripts": {
         "clean": "rm -rf .turbo node_modules",
