update crud modal to use new modal

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,8 +2,7 @@
     "extends": "@fitness/tsconfig/base.json",
     "compilerOptions": {
         "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
-        "jsx": "react-jsx",
-
+        "jsx": "react-jsx"
     },
     "include": ["."],
     "exclude": ["node_modules"]
