--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
         "postinstall": "turbo run db-generate",
         "format": "pnpm prettier --write **/*.{js,json,md,yml,css,ts,tsx}"
     },
-    "dependencies": {}
+    "dependencies": {},
+    "devDependencies": {
+        "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+        "prettier": "^3.1.1",
+        "prettier-plugin-tailwindcss": "^0.5.11"
+    }
 }
