--- a/apps/supplement/public/manifest.json
+++ b/apps/supplement/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "WorkoutTrack",
-  "name": "WorkoutTrack",
+  "short_name": "SupplementTrack",
+  "name": "SupplementTrack",
   "theme_color": "#0D3140",
   "background_color": "#0D3140",
   "display": "standalone",
